Update gh workflows

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,8 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+[![R-CMD-check](https://github.com/MathMarEcol/shinyplanr/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/MathMarEcol/shinyplanr/actions/workflows/R-CMD-check.yaml)
+[![test-coverage](https://github.com/MathMarEcol/shinyplanr/actions/workflows/test-coverage.yaml/badge.svg)](https://github.com/MathMarEcol/shinyplanr/actions/workflows/test-coverage.yaml)
 <!-- badges: end -->
 
 The goal of shinyplanr is to ...
